<resources>
    <string name="app_name">intern-18-spring</string>
    <string name="btn_send_data">Send Data</string>
    <string name="btn_w1_intent">W1-Intent</string>
    <string name="btn_w1_view">W1-View</string>
    <string name="tvextradata">tvExtraData</string>
    <string name="tvextradataintent">tvExtraDataIntent</string>
    <string name="btn_w2_fragment">W2 - Fragment</string>
    <string name="btn_Reasource">W2 - Resrouce</string>
    <string name="btn_share">Share</string>
    <string name="tv_title">Title</string>
    <string name="btn_comment">Comment</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_commentt">Comment:</string>
    <string name="tv_bodyComment">
        Consectetur adipiscing elit..! Vestubulum vestibulum deignissm metus!…
    </string>
    <string name="tv_bodyTitle">
        Lorem ipsuum dolor sit amet, consectetur adipiscing elit.Nam sed ornare purus.
        Vestibulum vestibulu />
    </string>
    <string name="tv_Count">Tow minutes ago</string>
    <string name="tvName_surname">Name Surname</string>
    <string name="tvTow_minutes_ago">Tow minutes ago</string>
    <string name="tvHi">Hi</string>
    <string name="tvHello">Hello</string>
    <string name="tvHintType_your_message">Type your message</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="email_subscriptions">Email Subscriptions</string>
    <string name="alow_email_from_other">Alow email from other</string>
    <string name="w2_event_and_listenes">W2 - Event And listenes</string>
    <string name="hintUsername">Username</string>
    <string name="hintPasswork">Passwork</string>
    <string name="hintEmail">Email</string>
    <string name="btn_recyclerview_text">W3-D3-RecyclerView</string>
    <string name="sexMale">male</string>
    <string name="sexFamale">famale</string>
    <string name="nameFriend">Nguyen Van Phuc</string>
    <string name="countFriend">Friends</string>
    <string name="btn_UnFriends">Friends</string>
    <string name="toast_message_input">"You input your UseName"</string>
    <string name="toast_you_input_your_passwork">You input your Passwork</string>
    <string name="toast_you_input_your_email">You input your Email"</string>
    <string name="toast_you_is_checked_female">You is checked Female</string>
    <string name="toast_you_is_checked_male">You is checked Male</string>
    <string name="is_on"> is On</string>
    <string name="is_off"> is On</string>
    <string name="button_menu_text">Menu and ToolBar</string>
    <string name="w3_d3_viewpage">w3-d3-viewpage</string>
    <string name="w4_d1_menu_and_toolbar">W4 D1 Menu and ToolBar</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="headermenu">phuc.nguyen3@asiantech.vn</string>
    <string name="take_me_photo">Open Camera</string>
    <string name="choose_from_gallary">Open Galary</string>
    <string name="cancle">Cancle</string>
    <string name="items_menu">ItemsMenu</string>
    <string name="chose_a_photo">Chose a photo</string>
    <string name="w5_d1_database">W5 D1 Database</string>
    <string name="sharedpreferences">SharedPreferences</string>
    <string name="sqlite">SQLite</string>
    <string name="store">storage</string>
    <string name="click_me">Click Me</string>
    <string name="click_save">Nhấn để lưu</string>
    <string name="type_person_name">Type Person Name</string>
    <string name="type_person_age">Type Person Age</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="list_of_person">List Of Person</string>
    <string name="personname">PersonName</string>
    <string name="personage">PersonAge</string>
    <string name="play">Play</string>
    <string name="_00_00">00:00</string>
    <string name="services_boardcast_receive">Services Boardcast Receive</string>
    <string name="search">Search</string>
    <string name="w5_api">W5 - Api</string>
    <string name="track">Track</string>
    <string name="type_name_singer">Type Name Singer</string>
    <string name="lable_api">API</string>
    <string name="lable_infosinger">Info Singer</string>
    <string name="unit_test">Unit Test</string>
    <string name="check">Check</string>
</resources>
