<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_me_photo" />

    <Button
        android:id="@+id/btnOpenGallary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnOpenCamera"
        android:text="@string/choose_from_gallary" />

    <Button
        android:id="@+id/btnCancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnOpenGallary"
        android:text="@string/cancle" />
</RelativeLayout>
