<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_2dp">

    <EditText
        android:id="@+id/edtUseNameUnitTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUsername"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtPasswordUnitTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUseNameUnitTest"
        android:hint="@string/hintPasswork"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCheckLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPasswordUnitTest"
        android:text="@string/check" />
</RelativeLayout>
