<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_2dp">

    <Button
        android:id="@+id/btnSharedPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sharedpreferences" />

    <Button
        android:id="@+id/btnStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnSharedPreferences"
        android:text="@string/store" />

    <Button
        android:id="@+id/btnSQLite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btnSharedPreferences"
        android:text="@string/sqlite"
        tools:ignore="RelativeOverlap" />

    <FrameLayout
        android:id="@+id/flDatabase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnSharedPreferences"
        android:background="#80000000" />

</RelativeLayout>
